Update to ForwardFilter.java (#114)
* Update to ForwardFilter.java

- Loosened the requirements for ForwardFilter.java
- Added js class 'Shared' intended to host shared functionality
- Refactored ShipNowServlet.java to be bound by resource type instead of path

* Functionality updates:

- Re-implementation of redirect to 'thank-you-page' (not sure where the original implementation is / was)
- Update to ForwardFilter.java, we no longer pass the processing to other Filters in the system (unless we were not able to redirect to 'our' servlets) as these requests would fall through to default POST servlets that typically try to store the post requests as new nodes in repository

* Minor update

Corrected the inheritance chain on MarketoRequestException.java